--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/unicorn"]
 	path = lib/unicorn
 	url = https://github.com/unicorn-engine/unicorn
+[submodule "lib/capstone"]
+	path = lib/capstone
+	url = git@github.com:aquynh/capstone.git
