--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/capstone"]
 	path = lib/capstone
 	url = git@github.com:aquynh/capstone.git
+[submodule "lib/jsoncpp"]
+	path = lib/jsoncpp
+	url = git@github.com:open-source-parsers/jsoncpp.git
