C++ version, only reads a .json file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(ICEmu LANGUAGES C ASM)
+project(ICEmu LANGUAGES CXX)
 
-#execute_process(COMMAND "setup-lib.sh")
+# Build the libraries
+execute_process(COMMAND bash "-c" ${CMAKE_SOURCE_DIR}/"setup-lib.sh")
 
 #Include Unicorn
 include_directories(${CMAKE_SOURCE_DIR}/lib/unicorn/include)
@@ -12,4 +13,10 @@ link_directories(${CMAKE_SOURCE_DIR}/lib/unicorn)
 include_directories(${CMAKE_SOURCE_DIR}/lib/capstone/include/capstone)
 link_directories(${CMAKE_SOURCE_DIR}/lib/capstone)
 
+#Include JsonCPP
+include_directories(${CMAKE_SOURCE_DIR}/lib/jsoncpp/include)
+link_directories(${CMAKE_SOURCE_DIR}/lib/jsoncpp/build/lib)
+
+
+# ICEmu sources
 add_subdirectory(src)
