--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,16 @@
 # Add executable target
 add_executable(${PROJECT_NAME}
-    "main.c"
+    "main.cpp"
+    )
+
+target_compile_options(${PROJECT_NAME}
+    PUBLIC
+    -g
+    -O0
+    -std=c++11
     )
 
 # Link to libraries
-target_link_libraries(${PROJECT_NAME} pthread m unicorn capstone elf)
+target_link_libraries(${PROJECT_NAME} pthread m unicorn capstone elf jsoncpp)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
