--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/jsoncpp"]
 	path = lib/jsoncpp
 	url = git@github.com:open-source-parsers/jsoncpp.git
+[submodule "lib/boost"]
+	path = lib/boost
+	url = git@github.com:boostorg/boost.git
