Add jsoncpp back, as the boost verion is kinda strage
The boost version gives a warning, and getting the variables is not as
nice as in jsoncpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ link_directories(${CMAKE_SOURCE_DIR}/lib/capstone)
 include_directories(${CMAKE_SOURCE_DIR}/lib/jsoncpp/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib/jsoncpp/build/lib)
 
+#Include Boost
+include_directories(${CMAKE_SOURCE_DIR}/lib/boost)
+
 
 # ICEmu sources
 add_subdirectory(src)
