Add memory dump at the end (dumps all sections)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(${PROJECT_NAME}
     "main.cpp"
     "argparse.cpp"
     "memlayout.cpp"
+    "memdump.cpp"
     )
 
 target_compile_options(${PROJECT_NAME}
