--- a/src/icemu/CMakeLists.txt
+++ b/src/icemu/CMakeLists.txt
@@ -1,18 +1,26 @@
 # Add executable target
 add_executable(${PROJECT_NAME}
     "main.cpp"
-    "argparse.cpp"
-    "memlayout.cpp"
-    "memdump.cpp"
-    "emulator.cpp"
+    "ArgParse.cpp"
+    "MemoryDump.cpp"
+    "emu/Memory.cpp"
+    "emu/Emulator.cpp"
     )
 
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+    ${PROJECT_SOURCE_DIR}/include
+    )
+
+# Debug options
 target_compile_options(${PROJECT_NAME}
     PUBLIC
+    -Wall
     -g
     -ggdb
     -O0
     -std=c++11
+    #-fsanitize=address -fsanitize=undefined # Find memory related bugs, makes it way slower
     )
 
 # Link to libraries
