Add ycm config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 [._]s[a-v][a-z]
 [._]sw[a-p]
 .syntastic_config
+.ycm_extra_conf.py
 .vimrc
 .tmp
 .bak
@@ -16,3 +17,4 @@ build/
 *.so
 *.so*
 *.a
+
