Add mock function plugin, more as an example

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -21,3 +21,4 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/plugins)
 
 add_subdirectory(display_instructions_plugin)
 add_subdirectory(step_instructions_plugin)
+add_subdirectory(mock_function_plugin)
