Move example mock plugin to example directory
Also add example plugin to the build dir, except for the simple hook
example. I want that to be as simple as possible so I don't force CMake
onto people :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,6 @@ add_subdirectory(src/icemu)
 
 # Build the plugins
 add_subdirectory(src/plugins)
+
+# Build the examples (TODO: Make optional)
+add_subdirectory(example/plugin)
