--- a/example/plugin/CMakeLists.txt
+++ b/example/plugin/CMakeLists.txt
@@ -17,8 +17,6 @@ set(PLUGIN_LINK_OPTIONS
     -fPIC
     )
 
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/plugins)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/example-plugins)
 
-add_subdirectory(display_instructions_plugin)
-add_subdirectory(step_instructions_plugin)
-add_subdirectory(mock_putc_plugin)
+add_subdirectory(mock_function_plugin)
