Add working (but not fully) coremark code

--- a/arm-code/apps/CMakeLists.txt
+++ b/arm-code/apps/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(loop-and-return)
 add_subdirectory(loop-forever)
 add_subdirectory(call-simple)
 add_subdirectory(call-printf)
+add_subdirectory(coremark)
