--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -22,3 +22,5 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/plugins)
 add_subdirectory(display_instructions_plugin)
 add_subdirectory(step_instructions_plugin)
 add_subdirectory(mock_putc_plugin)
+add_subdirectory(mock_clockfunc_plugin)
+add_subdirectory(mock_clockfunc_emutime_plugin)
