Add memory access ratio plugin

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(step_instructions_plugin)
 add_subdirectory(mock_putc_plugin)
 add_subdirectory(mock_clockfunc_plugin)
 add_subdirectory(mock_clockfunc_emutime_plugin)
+add_subdirectory(memory_access_ratio_plugin)
