--- a/arm-code/CMakeLists.txt
+++ b/arm-code/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-set(CMAKE_TOOLCHAIN_FILE "config-m4/toolchain.cmake")
+message("Using toolchain file: ${CMAKE_TOOLCHAIN_FILE}")
 
 project(arm-test-code LANGUAGES C ASM)
 
