--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(mock_clockfunc_emutime_plugin)
 add_subdirectory(memory_access_ratio_plugin)
 add_subdirectory(instruction_count_main_plugin)
 add_subdirectory(intermittency_plugin)
+add_subdirectory(idempotency_statistics_plugin)
