--- a/src/plugins/idempotency_statistics_plugin/CMakeLists.txt
+++ b/src/plugins/idempotency_statistics_plugin/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(${PLUGIN_NAME}
 target_include_directories(${PLUGIN_NAME}
     PUBLIC
     ${PLUGIN_INCLUDE_DIRECTORIES}
+    ${PROJECT_SOURCE_DIR}/src/plugins
     )
 
 target_compile_options(${PLUGIN_NAME}
