Add 3 new plugins
* track_variable
* final_value
* checkpoint_verification

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -29,3 +29,6 @@ add_subdirectory(instruction_count_main_plugin)
 add_subdirectory(intermittency_plugin)
 add_subdirectory(idempotency_statistics_plugin)
 add_subdirectory(cycle_count_plugin)
+add_subdirectory(final_value_plugin)
+add_subdirectory(track_variable_plugin)
+add_subdirectory(checkpoint_verification_plugin)
