[pugins] add 3 new plugins
* checkpoint_marker
* callsite_count
* checkpoint_side_effects (used for debugging)

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -32,3 +32,6 @@ add_subdirectory(cycle_count_plugin)
 add_subdirectory(final_value_plugin)
 add_subdirectory(track_variable_plugin)
 add_subdirectory(checkpoint_verification_plugin)
+add_subdirectory(callsite_count_plugin)
+add_subdirectory(checkpoint_marker_plugin)
+add_subdirectory(checkpoint_side_effects_plugin)
