[plugin] add instruction profiling plugin
Outputs a csv with instruction_address,execition_count

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(checkpoint_verification_plugin)
 add_subdirectory(callsite_count_plugin)
 add_subdirectory(checkpoint_marker_plugin)
 add_subdirectory(checkpoint_side_effects_plugin)
+add_subdirectory(instruction_profiling_plugin)
