[plugin] Add call count and call frequency plugins

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -36,3 +36,5 @@ add_subdirectory(callsite_count_plugin)
 add_subdirectory(checkpoint_marker_plugin)
 add_subdirectory(checkpoint_side_effects_plugin)
 add_subdirectory(instruction_profiling_plugin)
+add_subdirectory(call_count_plugin)
+add_subdirectory(call_frequency_plugin)
