[powertrace] add the powertrace plugin

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory(checkpoint_side_effects_plugin)
 add_subdirectory(instruction_profiling_plugin)
 add_subdirectory(call_count_plugin)
 add_subdirectory(call_frequency_plugin)
+add_subdirectory(powertrace_plugin)
