--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,28 +34,14 @@ endif()
 add_subdirectory(src/icemu)
 
 # Build the plugins
-#add_subdirectory(src/plugins)
-
-# Build the examples (TODO: Make optional)
-#add_subdirectory(example/plugin)
-
-# Build ARM code using GCC
-add_custom_target(arm-gcc
-    COMMAND bash "-c" ${CMAKE_SOURCE_DIR}/"arm-code/build-gcc.sh"
-    COMMENT "Build ARM code using GCC"
-    VERBATIM
-)
-
-# Build ARM code using Clang
-add_custom_target(arm-clang
-    COMMAND bash "-c" ${CMAKE_SOURCE_DIR}/"arm-code/build-clang.sh"
-    COMMENT "Build ARM code using Clang+LLVM"
-    VERBATIM
-)
-
-# Build the ARM code GCC and Clang
-add_custom_target(arm
-    COMMENT "Build ARM code"
-    DEPENDS arm-gcc arm-clang
-    VERBATIM
-)
+include(ExternalProject)
+ExternalProject_Add(plugins
+  EXCLUDE_FROM_ALL true
+  DEPENDS ICEmu
+  SOURCE_DIR ${CMAKE_SOURCE_DIR}/plugins
+  BINARY_DIR ${CMAKE_SOURCE_DIR}/plugins/build
+  CONFIGURE_COMMAND ${CMAKE_COMMAND} ../
+  #BUILD_COMMAND "make"
+  BUILD_ALWAYS true
+  INSTALL_COMMAND ""
+  )
