--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -41,6 +41,10 @@ set(PLUGIN_LINK_OPTIONS
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 add_subdirectory(display_instructions_plugin)
+add_subdirectory(call_count_plugin)
+
+# Legacy plugins, not tested with the currecnt version of ICEmu
+#add_subdirectory(callsite_count_plugin)
 #add_subdirectory(step_instructions_plugin)
 #add_subdirectory(mock_putc_plugin)
 #add_subdirectory(mock_clockfunc_plugin)
@@ -53,7 +57,6 @@ add_subdirectory(display_instructions_plugin)
 #add_subdirectory(final_value_plugin)
 #add_subdirectory(track_variable_plugin)
 #add_subdirectory(checkpoint_verification_plugin)
-#add_subdirectory(callsite_count_plugin)
 #add_subdirectory(checkpoint_marker_plugin)
 #add_subdirectory(checkpoint_side_effects_plugin)
 #add_subdirectory(instruction_profiling_plugin)
