Add "Stop Emulation" plugins for ARM and RISC

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -48,6 +48,12 @@ add_subdirectory(call_count_plugin)
 add_subdirectory(mock_putc_plugin)
 add_subdirectory(mock_clockfunc_plugin)
 
+# ARMv7 specific plugins
+add_subdirectory(armv7_stop_emulation_plugin)
+
+# RISCV64 specific plugins
+add_subdirectory(riscv64_stop_emulation_plugin)
+
 # Legacy plugins, not tested with the currecnt version of ICEmu
 #add_subdirectory(callsite_count_plugin)
 #add_subdirectory(step_instructions_plugin)
