Add a ALL_EVENTS hook and update examples
An ALL_EVENTS hook triggers both for instructions that are
executed AND for memory accesses. So it remove the need for
tracking and accessing instruction counts for example in a memory
plugin.

--- a/example/plugin/CMakeLists.txt
+++ b/example/plugin/CMakeLists.txt
@@ -1,12 +1,31 @@
-set(PLUGIN_INCLUDE_DIRECTORIES
-    ${PROJECT_SOURCE_DIR}/include
-    )
+cmake_minimum_required(VERSION 3.15)
+
+project(Plugins LANGUAGES CXX)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+set(ICEMU_ROOT_DIR "${CMAKE_SOURCE_DIR}/../../")
+
+#Include Unicorn
+include_directories(${ICEMU_ROOT_DIR}/lib/unicorn/include)
+link_directories(${ICEMU_ROOT_DIR}/lib/unicorn/build)
+
+#Include Capstone
+include_directories(${ICEMU_ROOT_DIR}/lib/capstone/include)
+link_directories(${ICEMU_ROOT_DIR}/lib/capstone)
+
+#Include ElfIO
+include_directories(${ICEMU_ROOT_DIR}/lib/ELFIO)
+
+#Include ICEmu
+include_directories(${ICEMU_ROOT_DIR}/include/)
+link_directories(${ICEMU_ROOT_DIR}/build/)
 
 set(PLUGIN_COMPILE_OPTIONS
     -Wall
     -Wextra
     -g
-    -O0
+    -O3
     -std=c++11
     -shared
     -fPIC
@@ -17,6 +36,9 @@ set(PLUGIN_LINK_OPTIONS
     -fPIC
     )
 
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/example-plugins)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
+add_subdirectory(hook_code_plugin)
+add_subdirectory(hook_memory_plugin)
+add_subdirectory(hook_all_events_plugin)
 add_subdirectory(mock_function_plugin)
